<resources>
    <string name="app_name">Happs</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activity_touch">Map</string>
    <string name="title_activity_define_event">DefineEvent</string>
    <string name="take_picture">Take picture</string>
    <string name="permission_location_rationale">We need your location in order to display events relevant to you.</string>
    <string name="permission_camera_rationale">We need your camera in order to create events.</string>

    <string name="permission_internet_rationale">We need to use the internet to get your events. This app will not work without this permission.</string>
    <string name="permission_external_rationale">We need permission to save the pictures you take with this app onto your phone. This app will not work without this permission.</string>

    <string name="ok">OK</string>

    <string name="facebook_app_id">385707474886362</string>
    <string name="google_places_key">AIzaSyCzXNLRHn8rLuA0GWcY3-YCt5ZqF6VCQjg</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="search_location">Search event location</string>
    <string name="suggested_location">Location suggestions</string>
    <string name="event_location">Event location</string>
    <string name="location">Location</string>
    <string name="event_name">Event name</string>
    <string name="event_details">Event details</string>
    <string name="start_time">Start time</string>
    <string name="start_date">Event date</string>
    <string name="end_time">End time</string>
    <string name="private_string">Private</string>
    <string name="public_string">Public</string>
    <string name="enable_invites">Enable invites</string>
    <string name="invite_plus">Invite +</string>
    <string name="create">Create</string>
    <string name="title_activity_event">Event</string>
    <string name="event_chat">Event Chat</string>
    <string name="attendees">Attendees</string>
    <string name="attend">Attend</string>

    <string name="title_activity_side_menu">SideMenu</string>
    <string name="details">details&#8230;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_events">My Events</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_logout">Log Out</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="directions">Get directions</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_friends_list">Friends</string>
    <string name="title_activity_profile_view">User Profile</string>
    <string name="profile_picture_credit">https://www.iconfinder.com/icons/370076/avatar_client_person_photo_picture_profile_user_icon#size=128</string>
    <string name="picture_upload_error">Failed at uploading picture. Please try again later</string>
</resources>
