<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/nav_menu">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_box_black_18dp"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_people_black_18dp"
                android:title="@string/nav_friends" />
            <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_event_black_18dp"
                android:title="@string/nav_events" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
