<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ee364e.happs.LocationActivity">
    <TextView
        android:textColor="@color/darktext"
        android:textSize="20dp"
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:textSize="20dp"
        android:text="@string/event_location"
        android:textColor="@color/regulartext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:layout_alignParentStart="true"
        android:id="@+id/locationResult" />
    <TextView
        android:textSize="20dp"
        android:textColor="@color/darktext"
        android:layout_below="@id/locationResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_location"
        android:id="@+id/search_location"
        />
    <fragment
        android:layout_below="@id/search_location"
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />
    <TextView
        android:textColor="@color/darktext"
        android:textSize="20dp"
        android:layout_below="@id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggested_location"
        android:id="@+id/suggest_location"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/suggest_location"

        >

    <ListView
        android:id="@+id/placesList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:drawSelectorOnTop="false"
        />
     </RadioGroup>
</RelativeLayout>
