<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="ee364e.happs.OverviewActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="ee364e.happs.OverviewActivity">
    <ImageView
        android:id="@+id/imageViewOverView"
        android:layout_height="350dp"
        android:layout_width="350dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="3sp"
        android:textColor="@color/darktext"
        android:text="@string/event_name"
        />
    <TextView
        android:layout_margin="5dp"
        android:id="@+id/nameOverView"
        android:textSize="18sp"
        android:padding="5dp"
        android:background="@drawable/border"
        android:textColor="@color/regulartext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/darktext"
        android:text="@string/location"
        />
    <TextView
        android:id="@+id/placenameOverView"
        android:background="@drawable/border"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:textColor="@color/regulartext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/addressOverView"
        android:textSize="18sp"
        android:background="@drawable/border"
        android:textColor="@color/regulartext"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dateOverView"
            android:textSize="18sp"
            android:background="@drawable/border"
            android:textColor="@color/regulartext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:padding="5dp"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/privateOverView"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:background="@drawable/border"
            android:textColor="@color/regulartext"
            android:layout_width="wrap_content"
            android:layout_weight=".5"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/darktext"
        android:text="@string/start_time"
        />

    <TextView
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/startTimeOverView"
        android:textSize="18sp"
        android:background="@drawable/border"
        android:textColor="@color/regulartext"
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/darktext"
        android:text="@string/end_time"
        />

    <TextView

        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/endTimeOverView"
        android:textSize="18sp"
        android:background="@drawable/border"
        android:textColor="@color/regulartext"
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/invitesEnableOverView"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@color/darktext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/darktext"
        android:text="@string/event_details"
        />
    <TextView
        android:id="@+id/detailsOverView"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:textColor="@color/regulartext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_marginTop="20dp"
        android:text="@string/create"
        android:textColor="#FFF"
        android:background="@color/colorPrimary"
        android:onClick="EventSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
